--- a/UsuariosBUSAPP/app/src/main/AndroidManifest.xml
+++ b/UsuariosBUSAPP/app/src/main/AndroidManifest.xml
@@ -39,6 +39,10 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"></activity>
 
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
         <uses-feature
             android:glEsVersion="0x00020000"
             android:required="true"/>
