--- a/UsuariosBUSAPP/app/build.gradle
+++ b/UsuariosBUSAPP/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.google.android.gms:play-services:10.2.0'
+    compile 'com.google.code.gson:gson:2.8.0'
     compile group: 'org.apache.httpcomponents', name: 'httpclient-android', version: '4.3.5.1'
     testCompile 'junit:junit:4.12'
 }
